--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.13"
